--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Siming",
   "private": true,
   "scripts": {
-    "start": "roadhog server",
+    "start": "set port=2019 && roadhog server",
     "build": "roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
