--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-import": "^1.12.0",
     "dva": "^2.4.1",
     "js-md5": "^0.7.3",
+    "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
