--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dva": "^2.4.1",
     "js-md5": "^0.7.3",
     "nprogress": "^0.2.0",
+    "qs": "^6.7.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
